@@ -11,21 +11,12 @@ override_dh_autoreconf:
 	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
 
 override_dh_auto_configure:
-	dh_auto_configure -Bbuild -- --enable-introspection=no \
-	                             --enable-gtk-doc \
-	                             --enable-headless-tests
-
-override_dh_auto_build:
-	dh_auto_build -Bbuild
-
-override_dh_auto_clean:
-	dh_auto_clean -Bbuild
-
-override_dh_auto_test:
-	dh_auto_test -Bbuild
+	dh_auto_configure -- --enable-introspection=no \
+	                     --enable-gtk-doc \
+	                     --enable-headless-tests
 
 override_dh_auto_install:
-	dh_auto_install -Bbuild
+	dh_auto_install
 	find debian/tmp/usr/lib -name \*.la -exec rm {} \;
 	find debian/tmp/usr/lib -name \*.a -exec rm {} \;
 
